--- a/SocialNetwork/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/SocialNetwork/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.ExternalLoginConfirmationViewModel
+﻿@model SocialNetwork.ViewModels.Account.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
