--- a/SocialNetwork/Views/Account/Login.cshtml
+++ b/SocialNetwork/Views/Account/Login.cshtml
@@ -1,5 +1,7 @@
 ﻿@using SocialNetwork.Models
-@model LoginViewModel
+@using SocialNetwork.ViewModels
+@using SocialNetwork.ViewModels.Account
+@model SocialNetwork.ViewModels.Account.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
