--- a/SocialNetwork/Views/Account/ResetPassword.cshtml
+++ b/SocialNetwork/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.ResetPasswordViewModel
+﻿@model SocialNetwork.ViewModels.Account.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
