--- a/SocialNetwork/Views/Account/VerifyCode.cshtml
+++ b/SocialNetwork/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.VerifyCodeViewModel
+﻿@model SocialNetwork.ViewModels.Account.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
