--- a/SocialNetwork/Views/Manage/AddPhoneNumber.cshtml
+++ b/SocialNetwork/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.AddPhoneNumberViewModel
+﻿@model SocialNetwork.ViewModels.Manage.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
