--- a/SocialNetwork/Views/Manage/ChangePassword.cshtml
+++ b/SocialNetwork/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.ChangePasswordViewModel
+﻿@model SocialNetwork.ViewModels.Manage.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
