--- a/SocialNetwork/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/SocialNetwork/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.VerifyPhoneNumberViewModel
+﻿@model SocialNetwork.ViewModels.Manage.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
