--- a/SocialNetwork/Views/Account/ForgotPassword.cshtml
+++ b/SocialNetwork/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.ForgotPasswordViewModel
+﻿@model SocialNetwork.ViewModels.Account.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
