--- a/SocialNetwork/Views/Account/SendCode.cshtml
+++ b/SocialNetwork/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.SendCodeViewModel
+﻿@model SocialNetwork.ViewModels.Account.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
