--- a/SocialNetwork/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/SocialNetwork/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.ExternalLoginListViewModel
+﻿@model SocialNetwork.ViewModels.Account.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
