--- a/SocialNetwork/Views/Home/Index.cshtml
+++ b/SocialNetwork/Views/Home/Index.cshtml
@@ -3,9 +3,11 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Social Network</h1>
+    <p class="lead">This site is done with the aim of educating and is the basis of the graduate work.</p>
+    <p>@Html.ActionLink("Friends >>", "Friends", "User")</p>
+    <p>@Html.ActionLink("Conversations >>", "Index", "User")</p>
+    <p>@Html.ActionLink("Resources >>", "Index", "Resources")</p>
 </div>
 
 <div class="row">
