--- a/SocialNetwork/Views/Manage/Index.cshtml
+++ b/SocialNetwork/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.IndexViewModel
+﻿@model SocialNetwork.ViewModels.Manage.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
