--- a/SocialNetwork/Views/Manage/ManageLogins.cshtml
+++ b/SocialNetwork/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.ManageLoginsViewModel
+﻿@model SocialNetwork.ViewModels.Manage.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
