--- a/SocialNetwork/Views/Manage/SetPassword.cshtml
+++ b/SocialNetwork/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SocialNetwork.Models.SetPasswordViewModel
+﻿@model SocialNetwork.ViewModels.Manage.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
