--- a/SocialNetwork/Views/Resources/Create.cshtml
+++ b/SocialNetwork/Views/Resources/Create.cshtml
@@ -7,12 +7,15 @@
 
 @section css
 {
+    <!-- Styles for the jQquery File Upload Plugin in Basic Plus UI style -->
+    @Styles.Render("~/backload/blueimp/bootstrap/BasicPlusUI/css")
+
     @Styles.Render("~/Content/resource.create.css")
 }
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Resources", FormMethod.Post, new { Id = "createresource" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -60,24 +63,31 @@
                     <span class="switch-label" data-on="On" data-off="Off"></span> <span class="switch-handle"></span>
                 </label>
                 <br/>
-                <div id="upload">
-                    Uploading files
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
+
+<div class="form-horizontal">
+    <div id="upload" class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            @Html.Partial("Upload")
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input form="createresource" type="submit" value="Create" class="btn btn-default"/>
+        </div>
+    </div>
+</div>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section scripts{
+     <!-- Scripts for the jQquery File Upload Plugin in Basic Plus UI style* -->
+    @Scripts.Render("~/backload/blueimp/bootstrap/BasicPlusUI")
+
     @Scripts.Render("~/Scripts/resource.create.js")
 }
