Details view show only resource's files.

--- a/SocialNetwork/Views/Resources/Index.cshtml
+++ b/SocialNetwork/Views/Resources/Index.cshtml
@@ -20,11 +20,11 @@
 {
     <div class="well" style="max-width: 450px">
         <div class="media">
-            <a href="/Resources/Details/@item.Id" class="pull-left">
+            <a href="/SocialNetwork/Resources/Details/@item.Id" class="pull-left">
                 <img class="media-object" src="~/Content/Images/link.png">
             </a>
             <div class="media-body">
-                <a href="/Resources/Details/@item.Id"><h4 class="media-heading">@item.Name</h4></a>
+                <a href="/SocialNetwork/Resources/Details/@item.Id"><h4 class="media-heading">@item.Name</h4></a>
                 <p class="text-right">By&nbsp;@item.UserName</p>
                 <ul class="list-inline list-unstyled">
                     <li>
