--- a/SocialNetwork/Views/Resources/Details.cshtml
+++ b/SocialNetwork/Views/Resources/Details.cshtml
@@ -7,6 +7,9 @@
 
 @section css
 {
+    <!-- Styles for the jQquery File Upload Plugin in Basic Plus UI style -->
+    @Styles.Render("~/backload/blueimp/bootstrap/BasicPlusUI/css")
+
     @Styles.Render("~/Content/font-awesome.min.css")
 }
 
@@ -15,7 +18,7 @@
 <div>
     <h4>Resource</h4>
     <hr/>
-    <div class="well" style="max-width: 800px">
+    <div class="well" style="max-width: 700px">
         <div class="media">
             <div class="media-body">
                 <h4 class="media-heading">@Model.Name</h4>
@@ -46,6 +49,7 @@
                         <span><i class="fa fa-google-plus-square"></i></span>
                     </li>
                 </ul>
+                @Html.Partial("DetailsPartialView")
             </div>
         </div>
     </div>
@@ -55,3 +59,14 @@
     @Html.ActionLink("Delete", "Delete", new {id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+@section scripts{
+    <!-- Scripts for the jQquery File Upload Plugin in Basic Plus UI style* -->
+    @Scripts.Render("~/backload/blueimp/bootstrap/BasicPlusUI")
+
+    @Scripts.Render("~/Scripts/resource.details.js")
+
+    <script>
+        var details = new Details('@ViewBag.Names');
+    </script>
+}
