--- a/SocialNetwork/Views/Resources/Edit.cshtml
+++ b/SocialNetwork/Views/Resources/Edit.cshtml
@@ -5,9 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section css
+{
+    <!-- Styles for the jQquery File Upload Plugin in Basic Plus UI style -->
+    @Styles.Render("~/backload/blueimp/bootstrap/BasicPlusUI/css")
+
+    @Styles.Render("~/Content/resource.create.css")
+}
+
 <h2>Edit</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Resources", FormMethod.Post, new { Id = "editresource", onsubmit = "return editResource()" }))
 {
     @Html.AntiForgeryToken()
     
@@ -54,17 +62,64 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <label class="control-label col-md-2">Upload files</label>
+            <div class="col-md-10">
+                <label class="switch switch-flat">
+                    @{
+                        if (Model.FilesNames.Count != 0)
+                        {
+                            <input class="switch-input" type="checkbox" checked/>
+                        }
+                        else
+                        {
+                            <input class="switch-input" type="checkbox"/>
+                        }
+                    }
+                    <span class="switch-label" data-on="On" data-off="Off"></span> <span class="switch-handle"></span>
+                </label>
+                <br />
             </div>
         </div>
     </div>
 }
+
+<div class="form-horizontal">
+    @{
+        if (Model.FilesNames.Count != 0)
+        {
+            <div id="upload" class="form-group" style="display: block">
+                <div class="col-md-offset-2 col-md-10">
+                    @Html.Partial("EditPartialView")
+                </div>
+            </div>
+        }
+        else
+        {
+            <div id="upload" class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    @Html.Partial("EditPartialView")
+                </div>
+            </div>
+        }
+    }
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input form="editresource" type="submit" value="Save" class="btn btn-default"/>
+        </div>
+    </div>
+</div>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section scripts{
-    @Scripts.Render("~/Scripts/resource.create.js")
+    <!-- Scripts for the jQquery File Upload Plugin in Basic Plus UI style* -->
+    @Scripts.Render("~/backload/blueimp/bootstrap/BasicPlusUI")
+
+    @Scripts.Render("~/Scripts/resource.edit.js")
+
+    <script>
+        var edit = new Edit('@ViewBag.Names');
+    </script>
 }
